working on IE flexbox bugs

--- a/_source/scss/base/_type.scss
+++ b/_source/scss/base/_type.scss
@@ -192,7 +192,8 @@ p {
 
   &.small {
     position: relative;
-    font-size: 1.2rem;
+    font-size: 1.19rem;
+    // font-size: 1.2rem;
   }
 }
 
